Bug 463279 - Ampersands (&) in filename missing in Compress submenu
Summary: Ampersands (&) in filename missing in Compress submenu
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-20 19:07 UTC by John Veness
Modified: 2024-08-19 13:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Veness 2022-12-20 19:07:30 UTC
STEPS TO REPRODUCE
1. Open Dolphin
2. Create a new folder called, for example, "Night & Day"
3. Right-click on the folder, and open the Compress submenu

OBSERVED RESULT
Submenu items called:
- Here as "Night  Day.tar.gz"
- Here as "Night  Day.zip"

EXPECTED RESULT
Submenu items called:
- Here as "Night & Day.tar.gz"
- Here as "Night & Day.zip"

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20221219
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Kernel Version: 6.0.12-1-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 620
Manufacturer: HP
Product Name: HP ProBook 450 G4

ADDITIONAL INFORMATION
Note that the compressed file that is created *does* contain an ampersand, it's just the menu that is incorrect.
Comment 1 Bug Janitor Service 2024-08-13 19:16:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/256
Comment 2 Nate Graham 2024-08-19 13:25:33 UTC
Git commit 0ac7e385055ea697d9eaf11a4a8c11ee7b7c5a0b by Nate Graham, on behalf of John Veness.
Committed on 19/08/2024 at 13:18.
Pushed by ngraham into branch 'master'.

Fix display of ampersands in filename

If you right-clicked on a filename with an ampersand in it, the
ampersand was removed in the context menu.

M  +1    -0    app/compressfileitemaction.cpp

https://invent.kde.org/utilities/ark/-/commit/0ac7e385055ea697d9eaf11a4a8c11ee7b7c5a0b