Fix display of ampersands in filename

If you right-clicked on a filename with an ampersand in it, the
ampersand was removed in the context menu.

BUG: 463279